methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:28: error: expected class or object definition
var caseVerte = false
^SlugHunting:30: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:44: error: expected class or object definition
def colorie()={
^SlugHunting:49: error: Unmatched closing brace '}' ignored here
}
^